   - ofaTVAFormPage: the form is now duplicable (todo #1509).
   - ofaTVAFormProperties: improve properties update.
   - ofaTVARecordProperties: better center the label (todo #1515).
   - ofaTVARecordProperties: review life cycle and dynamic of the status (todo #1511).
   - ofaTVARecordTreeview: review column title of the status (todo #1510).

 Bug fixes:

   - ofaITVColumnable: protect column addressing against false identifiers.
   - ofaRestoreAssistant: fix ofaIDBDossierMeta ref count (todo #1507).
   - ofaRestoreAssistant: fix ofaIDBExerciceMeta occurrence count (todo #1508).
   - ofaTVAFormProperties: fix new record creation.
   - ofaTVARecordProperties: fix operation date setting (todo #1514).
   - ofaTVARecordProperties: fix Cancel button sensitivity (todo #1523).
   - ofaUnreconcilPage: disconnect the signal handler (todo #1496).
   - ofaUnsettledPage: disconnect the signal handler (todo #1496).
   - ofoBat: fix new record insertion.
   - ofoTVAForm: fix new record insertion.
   - ofoTVARecord: fix new record insertion.
   - DBModel v0.38: allow BAT_ACC_USER to be NULL.
   - LCL PDF importer: fix operation year setup (todo #1529).
   - my_utils_container_updstamp_setup_full(): review null values handling (todo #1531).

 Other changes:

   - myDndWindow, ofaNomodalPage: homogeneize debug messages.
   - myIBin: has its own 'my-ibin-changed' signal (todo #1501).
   - mySettings: have an info message instead of debug when file doesn't exist.
   - ofaAccentryStore: becomes a dossier-level singleton.
   - ofaDossierCollection: ofa_dossier_collection_remove_meta(): new method.
   - ofaDossierStore: add exercice localized label column.
   - ofaExerciceTreeview: now uses ofaDossierStore.
   - ofo-entry-fec.{c,h}: removed files.

-----------------------------------------------------------------------
 P. Wieser - Created on 2014, may 2nd
             Last updated on 2018, feb. 22nd.