@@ -376,8 +376,6 @@
 1527 2018- 1-19 BUG: on reconciliation, open the select BAT window and escape
                 without selectionning any line
 
-1528 2018- 2-17 BUG: reconciliation page: 'clear' button appears disabled
-
 1530 2018- 2-17 Segfault when updating an amount in view entries while the
                 reconciliation is opened (see TODO_1530)
      2018- 2-22 cannot reproduce
@@ -387,6 +385,9 @@
 -----------------------------------------------------------------------
  DONE
  ====
+
+1528 2018- 2-17 BUG: reconciliation page: 'clear' button appears disabled
+     2018- 2-25 fixed
 
 1529 2018- 2-17 BUG: when importing LCL BAT PDF, where is taken effect year from ?
                 (should be the same that value year, or at least from begin date)
